PW1 - added border, yet to fix breadcrumbs alignment and padding on right and left of the page

--- a/PW-1/index.css
+++ b/PW-1/index.css
@@ -4,6 +4,11 @@
     /* background-color: rgb(46, 63, 63); */
 }
 
+.dropdown-menu {
+    background: rgba(0, 0, 0, 0.5);
+    color: blue;
+}
+
 #headerNavBar2 {
     color: white;
     background-color: rgb(17, 66, 104);
@@ -14,6 +19,6 @@ nav .navbar-nav li a {
     color: white !important;
 }
 
-.nav-link{
+.nav-link {
     color: white;
 }
